<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pause_string">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/pause_trigger_time_key"
            android:title="@string/pref_trigger_time_string"
            android:summary=""
            android:enabled="true"
            android:defaultValue="4"
            sample:msbp_minValue="4"
            sample:msbp_maxValue="30"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="min"
            sample:msbp_dialogEnabled="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/stop_string">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/stop_trigger_time"
            android:title="@string/pref_trigger_time_string"
            android:summary=""
            android:enabled="true"
            android:defaultValue="420"
            sample:msbp_minValue="4"
            sample:msbp_maxValue="420"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="min"
            sample:msbp_dialogEnabled="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/speed_string">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/recommended_speed_time_key"
            android:title="@string/avg_speed_time_string"
            android:summary=""
            android:enabled="true"
            android:defaultValue="30"
            sample:msbp_minValue="10"
            sample:msbp_maxValue="60"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="min"
            sample:msbp_dialogEnabled="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sms_notifications_string">

        <ListPreference
            android:key="@string/phone_select_sms_pause"
            android:title="@string/number_string"
            android:entries="@array/pref_phone_numbers_titles"
            android:entryValues="@array/pref_phone_numbers_values"
            android:defaultValue="1"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null">
        </ListPreference>

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/phone_select_sms_pause_timeout_key"
            android:title="@string/send_sms_after_pause_string"
            android:summary=""
            android:enabled="true"
            android:defaultValue="4"
            sample:msbp_minValue="4"
            sample:msbp_maxValue="60"
            sample:msbp_interval="1"
            sample:msbp_measurementUnit="min"
            sample:msbp_dialogEnabled="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/template_route_string">

        <SwitchPreference
            android:key="@string/parcours_type_enabled_key"
            android:defaultValue="false"
            android:title="@string/template_route_title_string" />

        <EditTextPreference
            android:key="@string/parcours_type_name"
            android:dependency="@string/parcours_type_enabled_key"
            android:defaultValue="@string/template_route_name_string"
            android:title="@string/template_route_name_string" />

    </PreferenceCategory>

</PreferenceScreen>
