<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="right"
    android:layout_centerHorizontal="true"
    android:padding="5dp">
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="0dp"
        android:text="@string/cancel_string"
        android:textSize="15sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/no_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="0dp"
        android:text="@string/no_string"
        android:textSize="15sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/yes_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="0dp"
        android:text="@string/yes_string"
        android:textSize="15sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        />
</LinearLayout>